[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
# A regular expression that matches files and
# directories that should be excluded on
# recursive searches. An empty value means no
# paths are excluded. Use forward slashes for
# directories on all platforms (Windows, too).
# Exclusions are calculated first, inclusions
# later. [default: /(\.direnv|\.eggs|\.git|\.h
# g|\.mypy_cache|\.nox|\.tox|\.venv|venv|\.svn
# |_build|buck-out|build|dist)/
# 
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# ^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
^/docs/conf.py
'''
